Fix horizontal scroll bug

--- a/css/form.css
+++ b/css/form.css
@@ -251,6 +251,7 @@ label.checkbox{
 input[type="checkbox"] {
 	visibility: hidden;
 	position: absolute;
+	width: 1px !important;
 }
 input[type="checkbox"] + ins{
 	text-decoration: none;
